# c-cpp-study

C_basic/: arr_arg.c  char_arr.c  enum_define.c  function_state.c  mem_location.c  point_arr.c  point_string.c  point_string_define.c  point_sumAndMinus.c  point_swap.c  pre_define.c  sizeof.c  struct_define.c
cpp_basic/: 01_helloWorld.cpp  02_var_state.cpp  03_type_modifier.cpp  05_sqrt.cpp  06_display_hex_oct.cpp  07_dispaly_char.cpp  08_floatnum.cpp  09_string_arr.cpp  10_string_class.cpp  11_structur.cpp  12_union.cpp  13_use_new.cpp  14_arraynew.cpp  15_ptrstr.cpp  16_newstruct.cpp  17_delete.cpp  18_for_factor.cpp  19_for_str_swap.cpp  20_for_str_cmp.cpp  21_waiting.cpp  22_textin1.cpp  23_textin2.cpp  24_textin3.cpp  25_nested.cpp  26_cctype.cpp  27_cinfish.cpp  28_cingolf.cpp  29_outfile.cpp  30_sumafile.cpp  31_arrfunc.cpp  32_recur.cpp  33_ruler.cpp  34_fun_ptr.cpp  35_inline.cpp  36_firstref.cpp  37_sceref.cpp  38_swaps.cpp  39_strtref.cpp  40_strquote.cpp  41_filefunc.cpp  (+18 more)
cpp_basic/04_extern/: main.cpp  support.cpp
cpp_basic/42_vscode/: calculator.cpp
cpp_basic/50_include_coordinate/: coordin.h  coordin.h.gch  file1.cpp  file2.cpp
cpp_basic/52_static_variable/: twofile1.cpp  twofile2.cpp
cpp_basic/55_namespace/: namesp.cpp  namesp.h  namesp.h.gch  namespp.cpp
cpp_basic/57_stock1/: stock1.cpp  stock1.h  stock1.h.gch  usestock1.cpp
cpp_basic/58_stock2_this/: stock2.cpp  stock2.h  stock2.h.gch  usestock2.cpp
cpp_basic/59_stack/: stack.cpp  stack.h  stack.h.gch  stacker.cpp
cpp_basic/60_mytime0_class/: mytime0.cpp  mytime0.h  mytime0.h.gch  usetime0.cpp
cpp_basic/61_mytime1_op_voerload/: mytime1.cpp  mytime1.h  mytime1.h.gch  usetime1.cpp
cpp_basic/62_mytime2_op_voerload_friend/: mytime2.cpp  mytime2.h  usetime2.cpp
cpp_basic/63_vector/: randwalk.cpp  vector.cpp  vector.h
cpp_basic/64_stonewt/: stone.cpp  stonewt.cpp  stonewt.h  stonewt.h.gch
cpp_basic/65_stonewt1/: stone1.cpp  stonewt1.cpp  stonewt1.h  stonewt1.h.gch
cpp_basic/66_stringbad/: stringbad.cpp  stringbad.h  vegnews.cpp
cpp_basic/67_String/: String1.cpp  String1.h  sayings1.cpp  syaings2.cpp
cpp_basic/70_queue/: bank.cpp  queue.cpp  queue.h  queue.h.gch
cpp_basic/71_tabtenn0/: tabtenn0.cpp  tabtenn0.h  tabtenn0.h.gch  usett0.cpp
cpp_basic/72_tabtenn1/: tabtenn1.cpp  tabtenn1.h  tabtenn1.h.gch  usett1.cpp
cpp_basic/73_brass/: brass.h
cpp_basic/cpprimer_2013/: 000_hello_world  000_playground  000_playground.cpp  001_simple_io.cpp  002_sum_input.cpp  003_occur_times.cpp  005_unsigned_signed  005_unsigned_signed.cpp  006_type_auto.cpp  008_string_init.cpp  009_string_op.cpp  009_vector_op.cpp  010_iter  010_iter.cpp  011_iter_binary_search  011_iter_binary_search.cpp  012_1_switch_exercise_511.cpp  012_1_switch_exercise_512.cpp  012_2_while_exercise_514.cpp  012_3_for_exercise_517.cpp  012_array.cpp  013_func_find_char  013_func_find_char.cpp  014_func_array  014_func_array.cpp  015_func_arglist  015_func_arglist.cpp  016_func_ptrarr.cpp  017_func_overload.cpp  017_func_test.cpp  020_io_readf  020_io_readf.cpp  021_io_stringstream  021_io_stringstream.cpp  022_container_basic  022_container_basic.cpp  023_algorithm  023_algorithm.cpp  024_associate_container.cpp  a.out  (+2 more)
cpp_basic/eigen/: 01_eigen  02_size_set_run_time  02_size_set_run_time.cpp  03_size_set_compile_time  03_size_set_compile_time.cpp  04_resize  04_resize.cpp  05_arithm_add_sub  05_arithm_add_sub.cpp  06_arithm_multi_div  06_arithm_multi_div.cpp  07_arithm_transposition_conjugate  07_arithm_transposition_conjugate.cpp  08_arithm_matrix_multi  08_arithm_matrix_multi.cpp  09_arithm_dot_cross_product  09_arithm_dot_cross_product.cpp  10_arithm_reduction  10_arithm_reduction.cpp  11_array_class  11_array_class.cpp  12_block  12_block.cpp  13_block_lvalue  13_block_lvalue.cpp  14_block_row_cols  14_block_row_cols.cpp  15_block_corner  15_block_corner.cpp  16_block_vector  16_block_vector.cpp  17_index_slice  17_index_slice.cpp  18_reduction  18_reduction.cpp  19_visitor  19_visitor.cpp  20_broadcasting  20_broadcasting.cpp  21_reshape  (+1 more)
cpp_basic/gdal/: 01_gdal_api_tutorial.cpp  01_gdal_basic_read.cpp
cpp_basic/multithreading/: ThreadPoolTest  ThreadPoolTest.cpp  asyncFuture  asyncFuture.cpp  cast  cast.cpp  conditionVarTest  conditionVarTest.cpp  multithreadingTest  multithreadingTest.cpp  mutexTest  mutexTest.cpp  (+4 more)
gdal/: 01_gdal_basic_read.cpp  02_gdal_create.cpp  03_ogr_crs.cpp  05_tif_read_write  05_tif_read_write.cpp  07_RPC_transform.cpp  08_gray2rgb_cmd.cpp  a.out  setup.py  spammodule.c
gdal/09_registration/: AddGCPsGDAL.cpp  AddGCPsGDAL.h  BasicImageRegistration.cpp  BasicImageRegistration.h  BasicRegistrationTest.cpp  CMakeLists.txt  CalcImageValue.cpp  GCPImg2MapNode.cpp  GCPImg2MapNode.h  ImageRegistration.cpp  ImageRegistration.h  ImageSimilarityMetric.h  StandardImageSimilarityMetrics.cpp  StandardImageSimilarityMetrics.h
gdal/09_registration/common/: CMakelists.txt  Commons.h  rsgis-tqdm.cpp  rsgis-tqdm.h
gdal/09_registration/exception/: BasicException.cpp  BasicException.h  CMakeLists.txt  ImageBandException.cpp  ImageBandException.h  ImageCalcException.cpp  ImageCalcException.h  ImageException.cpp  ImageException.h  InputStreamException.cpp  InputStreamException.h  MathException.cpp  MathException.h  MatricesException.cpp  MatricesException.h  OutputStreamException.cpp  OutputStreamException.h  RegistrationException.cpp  RegistrationException.h  TextException.cpp  TextException.h  VectorsException.cpp  VectorsException.h
gdal/09_registration/img/: CMakelists.txt  CalcImageValue.h  ImageUtils.cpp  ImageUtils.h
gdal/09_registration/math/: CMakeLists.txt  MathsUtils.cpp  MathsUtils.h  Matrices.cpp  Matrices.h  PolyFit.cpp  PolyFit.h  SingularValueDecomposition.cpp  SingularValueDecomposition.h  Vectors.cpp  Vectors.h
gdal/09_registration/utils/: CMakelists.txt  TextUtils.cpp  TextUtils.h
gdal/10_FY3D/: CMakeLists.txt  FY3D_MERSI_L1_Reader.cpp  FY3D_MERSI_L1_Reader.h  fy3_mersi_process.cpp  gdal_grid_test.cpp  grid_data.cpp  grid_data.h  h5_read.cpp  h5_read.h  utils.cpp  utils.h
(+81 files in other folders)
